vlib/v/checker/tests/flag_enum_exhaustive_else_branch.vv
@[flag]
enum Permission {
	read
	write
	execute
}

perm := Permission.read | Permission.write | Permission.execute
dump(perm)

match perm {
	.read { println('r') }
	.write { println('w') }
	.execute { println('x') }
	// must require an `else` here
}
